# DopeShell

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirments.txt  source.py
dopeshell/: __init__.py  cli.py  dopeshell.py  keywords.py
dopeshell/components/: core.py
engine/: core.py  dopeshell.py  keywords.py  utils.py
engine/components/: core.py  imports.py  keywords.py  tempCodeRunnerFile.py  utils.py
mapping/: mapping.json
